<resources>
    <string name="app_name">Chore Tracker App</string>
    <string name="view_calendar">View Calendar</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here.</string>
    <string name="register">Register</string>
    <string name="chore_tracker_app">Chore Tracker App</string>
    <string name="username_or_email">username or email</string>
    <string name="username">username</string>
    <string name="name">name</string>
    <string name="verify">Verify</string>
    <string name="verification_code">verification code</string>
    <string name="forgot_your_password_click_here_to_reset_it">Forgot your password? Click here to reset it</string>
    <string name="settings_header">Settings</string>
    <string name="settings_display_name">Display Name:</string>
    <string name="settings_theme">Theme:</string>
    <string name="members">Members</string>
    <string name="chores">Chores</string>
    <string name="manage_chores">manage chores</string>
    <string name="groups">groups</string>

    <string-array name="settings_theme_options">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="app_main_screen">Sign in</string>
    <string name="app_main_screen_title">Cognito Identity</string>
    <string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="pick_MFA">MFA Options</string>
    <string name="title_activity_about_app">AboutApp</string>
    <string name="about">Copyright 2017 Amazon.com, Inc. or its affiliates. All Rights Reserved.\n\nLicensed under the Amazon Software License (the "License").\nYou may not use this file except in compliance with the License.\nA copy of the License is located at\n\nhttp://aws.amazon.com/asl/
\n\nor in the "license" file accompanying this app. This app is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="more_info">This is a sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="title_activity_sign_up_confirm">SignUpConfirm</string>
    <string name="title_activity_mfa">MFAActivity</string>
    <string name="title_activity_choose_mfa">ChooseMFA</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_add_attribute">AddAttributeActivity</string>
    <string name="title_activity_device_settings">DeviceSettings</string>
    <string name="title_activity_new_password">NewPassword</string>
    <string name="todaysQuote">"Today's quote: \n \"You got this!\""</string>
    <string name="signin">sign in</string>
    <string name="exit">exit</string>

</resources>
